# flight_planner

./: Cargo.toml  aircrafts.csv  fr-airports.csv
data/: airports.db
src/: main.rs  navigation.rs
src/navigation/: aircraft.rs  airport.rs  error.rs  flightplan.rs  fuel.rs  geographics.rs
ui/: app-window.slint
ui/views/: balance.slint  main_menu.slint
